# airflow-blogpost

./: README.md  pyproject.toml
infra/: Dockerfile  docker-compose.yml  entrypoint.sh  requirements.txt
src/dags/: dag-random-card.py  dag_card_of_the_day.py  dag_random_card.py  twitter.py
src/dags/sql/: create-table-cards.sql  get-card-of-the-day.sql  insert-card.sql
