[tool.poetry]
name = "aprendendo-airflow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
apache-airflow = {extras = ["postgres"], version = "^2.1.4"}
tweepy = "3.10.0"
psycopg2 = "2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
